# image-match

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Makefile  Pipfile  README.md  docker-compose.yml  pyproject.toml  setup.py
.github/: dependabot.yml  dockerimage-latest.yml
.github/workflows/: dockerimage-latest.yml
image_match/: __init__.py  elasticsearch_driver.py  goldberg.py  signature_database_base.py
tests/: test_elasticsearch_driver.py  test_elasticsearch_driver_metadata_as_nested.py  test_goldberg.py
