[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "image_match"
version = "2.0.1"
authors = [
    { name = "Ryan Henderson", email = "ryan@bigchaindb.com" },
]
description = "image_match is a simple package for finding approximate image matches from a corpus."
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Database',
    'Topic :: Database :: Database Engines/Servers',
    'Topic :: Software Development',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.4',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX :: Linux',
    'Topic :: Multimedia :: Graphics',
]
dependencies = []

[project.urls]
Repository = "https://github.com/ascribe/image-match/"

[tool.poetry.dependencies]
python = "^3.10"

scikit-image = ">=0.16.2"
elasticsearch = ">=7.0.0,<8.0.0"

# image-match = { editable = true, extras = ["docs"], path = "." }

[tool.poetry.group.dev.dependencies]
coverage = "*"
pep8 = "*"
pyflakes = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
pytest-runner = "*"

[tool.poetry.group.docs.dependencies]
recommonmark = ">=0.4.0"
Sphinx = ">=1.3.5"
sphinxcontrib-napoleon = ">=0.4.4"
sphinx-rtd-theme = ">=0.1.9"

[tool.poetry.group.extras.dependencies]
cairosvg = ">1,<2"

# ... other project metadata fields as listed in:
#     https://packaging.python.org/en/latest/guides/writing-pyproject-toml/